[tool.poetry]
name = "webappstore1"
version = "0.1.0"
description = ""
authors = ["jylu lyapunova <jylilapa@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
